--- a/application/admin/view/cov/add_members.html
+++ b/application/admin/view/cov/add_members.html
@@ -33,6 +33,7 @@
                      </div>
                  </div><div class="row">
                     <form id="form2">
+                        <legend>为学生干部添加</legend>
                      <div class="col-lg-6">
                          <textarea name="memberList" id="memberList" cols="30" rows="20"></textarea>
                      </div>
@@ -48,7 +49,7 @@
                     </form>
  
                      <div style="text-align:center;">
-                         <button formId='form2' class="btn btn-lg btn-success add">为班长添加</button>
+                         <button formId='form2' class="btn btn-lg btn-success add">为学生干部添加</button>
                      </div>
                  </div>
             </div>
