--- a/application/admin/view/cov/per_day_reports.html
+++ b/application/admin/view/cov/per_day_reports.html
@@ -91,7 +91,7 @@
                                     class="btn btn-info">
                                     下载今日全部报告
                                 </button></a>
-                            <a href="{:url('admin/Cov/downPerDayReports',['type'=>'conditon','date'=>$date,'path'=>$report_pic_path])}">
+                            <!-- <a href="{:url('admin/Cov/downPerDayReports',['type'=>'conditon','date'=>$date,'path'=>$report_pic_path])}">
                                 <button type="button" id="downReport" {empty name="hasList" } disabled {/empty}
                                     class="btn btn-info">
                                     下载今日情况单
@@ -100,7 +100,7 @@
                                 <button type="button" id="downReport" {empty name="hasList" } disabled {/empty}
                                     class="btn btn-info">
                                     下载今日电话截图
-                                </button></a>
+                                </button></a> -->
                         </div>
                     </div>
                     {/if}
