--- a/application/admin/view/cov/per_day_reports.html
+++ b/application/admin/view/cov/per_day_reports.html
@@ -72,7 +72,7 @@
 
                             {volist name="notList"" id="vo" }
                             <tr>
-                                <td style="width: 50px;">{$vo.username} </td>
+                                <td style="width: 50px;">{$vo.get_profile.username} </td>
 
                                 <td style="width: 30%;" colspan="2">
                                     未提交
