--- a/application/admin/view/cov/per_day_reports.html
+++ b/application/admin/view/cov/per_day_reports.html
@@ -12,7 +12,7 @@
             </div>
             <div class="widget-body">
                 <div class="table-responsive">
-                    {$datas|raw}
+                    {$hasList|raw}
                     <table class="table table-hover table-bordered text-nowrap">
                         <thead>
                             <tr>
