--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -23,7 +23,7 @@
                     <div class="or-line"></div>
                 </div>
                 <div class="loginbox-textbox">
-                    <input type="text" class="form-control" name="username" placeholder="用户名" />
+                    <input type="text" class="form-control" name="username" placeholder="用户名/邮箱" />
                 </div>
                 <div class="loginbox-textbox">
                     <input type="password" class="form-control" name="password" placeholder="密码" onkeydown='if(event.keyCode==13){$("#login").click()}'/>
