--- a/application/admin/view/cov/per_day_reports.html
+++ b/application/admin/view/cov/per_day_reports.html
@@ -50,6 +50,7 @@
                         <tbody>
                             {volist name="hasList"" id="vo" empty="暂时没有提交数据"}
                             <tr>
+                                <!-- <td style="width: 20px;">{$i} </td> -->
                                 <td style="width: 50px;">{$vo.get_profile.username} </td>
 
                                 <td style="width: 30%;">
@@ -71,6 +72,7 @@
 
                             {volist name="notList"" id="vo" }
                             <tr>
+                                <!-- <td style="width: 20px;">{$i} </td> -->
                                 <td style="width: 50px;">{$vo.username} </td>
 
                                 <td style="width: 30%;" colspan="2">
