--- a/application/admin/view/admin/list.html
+++ b/application/admin/view/admin/list.html
@@ -20,10 +20,10 @@
                         <div class="col-lg-2">
                             <input type="text" class="form-control" name="txt_search_username" id="txt_search_username">
                         </div>
-                        <label class="control-label col-lg-1" for="txt_search_status">状态</label>
+                        <!-- <label class="control-label col-lg-1" for="txt_search_status">状态</label>
                         <div class="col-lg-2">
                             <input type="text" class="form-control" name="txt_search_status" id="txt_search_status">
-                        </div>
+                        </div> -->
                         <div class="col-lg-1" style="text-align:left;">
                             <button type="submit" style="margin-left:50px" id="btn_query"
                                 class="btn btn-primary">查询</button>
