--- a/application/admin/view/cov/add_members.html
+++ b/application/admin/view/cov/add_members.html
@@ -2,6 +2,9 @@
 {block name="title"}
 为 辅导员/学生干部 添加下属班长
 {/block}
+{block name="page-breadcrumb"}
+<li class="active">为 辅导员/学生干部 添加下属班长</li>
+{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-6">
