--- a/application/admin/view/cov/index.html
+++ b/application/admin/view/cov/index.html
@@ -1,6 +1,9 @@
 {extend name="public/admin_base"}
 {block name="title"}
-Cov报告列表
+报告列表
+{/block}
+{block name="page-breadcrumb"}
+<li class="active">报告列表</li>
 {/block}
 {block name="page-main"}
 <div class="row">
