--- a/application/admin/view/cov/index_b.html
+++ b/application/admin/view/cov/index_b.html
@@ -1,6 +1,10 @@
 {extend name="public/admin_base"}
 {block name="title"}
-Cov报告记录
+我的报告记录
+{/block}
+
+{block name="page-breadcrumb"}
+<li class="active">我的报告记录</li>
 {/block}
 {block name="page-main"}
 <div class="row">
