--- a/application/admin/view/cov/reporter.html
+++ b/application/admin/view/cov/reporter.html
@@ -3,6 +3,9 @@
 {$title}
 
 {/block}
+{block name="page-breadcrumb"}
+<li class="active">{$title}</li>
+{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-lg-6">
