--- a/application/admin/view/cov/reporter.html
+++ b/application/admin/view/cov/reporter.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div style="text-align:center;margin-top: 20px;">
-                    <button id="report" disabled="true" class="btn btn-lg btn-success">提交报告</button>
+                    <button id="report" disabled="true" style="cursor :pointer;" class="btn btn-lg btn-success">提交报告</button>
                 </div>
             </div>
         </div>
@@ -171,7 +171,7 @@
 
     $("#report").click(function () {
         $.ajax({
-            url: 'reporter',
+            url: '{:url("admin/cov/reporter")}',
             method: 'post',
             dataType: 'json',
             data: '{$token}',
