--- a/application/admin/view/cov/per_day_reports.html
+++ b/application/admin/view/cov/per_day_reports.html
@@ -85,29 +85,34 @@
                             {/volist}
                         </tbody>
                     </table>
-                    {if $ifInstroctor=='yes' }
 
                     <div class="form-group text-align-right" style="margin-top: 20px;">
 
                         <div class="btn-group">
-                            <a href="{:url('admin/Cov/downPerDayReports',['date'=>$date,'type'=>'all','path'=>$date_pic_path])}">
+
+                            {if $ifInstroctor=='yes' }
+                            <a
+                                href="{:url('admin/Cov/downPerDayReports',['date'=>$date,'type'=>'all','path'=>$date_pic_path])}">
                                 <button type="button" id="downReport" {empty name="hasList" } disabled {/empty}
                                     class="btn btn-info">
                                     下载今日全部报告
                                 </button></a>
-                            <a href="{:url('admin/Cov/downPerDayReports',['type'=>'conditon','date'=>$date,'path'=>$report_pic_path])}">
+
+                            {/if}
+                            <a
+                                href="{:url('admin/Cov/downPerDayReports',['type'=>'conditon','date'=>$date,'path'=>$report_pic_path])}">
                                 <button type="button" id="downReport" {empty name="hasList" } disabled {/empty}
                                     class="btn btn-info">
                                     下载今日情况单
                                 </button></a>
-                            <a href="{:url('admin/Cov/downPerDayReports',['type'=>'phone','date'=>$date,'path'=>$phone_pic_path])}">
+                            <a
+                                href="{:url('admin/Cov/downPerDayReports',['type'=>'phone','date'=>$date,'path'=>$phone_pic_path])}">
                                 <button type="button" id="downReport" {empty name="hasList" } disabled {/empty}
                                     class="btn btn-info">
                                     下载今日电话截图
                                 </button></a>
                         </div>
                     </div>
-                    {/if}
                 </div>
             </div>
         </div>
