--- a/application/admin/view/rule/rule_group.html
+++ b/application/admin/view/rule/rule_group.html
@@ -16,13 +16,12 @@
 			</ul>
 			<div class="widget-body">
 				<div class="tabbable">
-					
 					<div class="tab-content">
 						<h1 class="text-center">为<span style="color:red">{$group_data['title']}</span>分配权限</h1>
 						<form action="" method="post">
 							<input type="hidden" name="id" value="{$group_data['id']}">
-							<table class="table table-striped table-bordered table-hover table-condensed
-					">
+							<div class="table-responsive">
+							<table class="table table-striped table-bordered table-hover table-condensed">
 								{volist name="rule_data" id="v"}
 								{empty name="v['child']"}
 								<tr class="b-group">
@@ -84,6 +83,7 @@
 									</td>
 								</tr>
 							</table>
+						</div>
 						</form>
 					</div>
 				</div>
