--- a/application/admin/view/cov/reporter.html
+++ b/application/admin/view/cov/reporter.html
@@ -14,8 +14,9 @@
                 <span class="widget-caption">{$title}</span>
             </div>
             <div class="widget-body">
-                <div class="alert alert-warning">
-                    为了保证成功上传，请在情况单上传之后再上传截图；多张截图时一次性选择完再上传
+                <div class="alert alert-warning" style="font-size:1.2em">
+                    为了保证成功上传，请在情况单上传之后再上传截图；
+                    <br>有多张截图时，务必全都选择完，再进行上传；
                 </div>
                 <div>
                     <legend>上传情况单</legend>
