调整上传插件参数

--- a/application/admin/view/cov/reporter.html
+++ b/application/admin/view/cov/reporter.html
@@ -62,36 +62,29 @@
         }
     }
     $("#single-upload").fileinput({
+        uploadAsync: false,//采用同步上传
+        dropZoneEnabled: false,//是否显示拖拽区域
         language: 'zh', //设置语言
         uploadUrl: '{:url("admin/cov/ajaxUpload")}', //上传的地址
-        allowedFileExtensions: ['jpg',"JPG", "jpeg", "JPEG", 'gif', 'png','PNG','tif'],//接收的文件后缀
-
-        uploadAsync: false,//false：采用同步上传
+        allowedFileExtensions: ['jpg','jpeg', 'gif', 'png','tif'],//接收的文件后缀
         browseClass: "btn btn-primary", //按钮样式
         removeFromPreviewOnError: true,//是否移除校验文件失败的文件
         overwriteInitial: false,  // 覆盖初始预览内容和标题设置
-        dropZoneEnabled: false,//是否显示拖拽区域   
         showCancel: false, // 显示取消按钮
         showZoom: false,     // 显示预览按钮
-        
-        showPreview:true,
-        resizeImage:true,
-        resizePreference:'height',
-        resizeImageQuality:0.9,
-
-        showUpload: true,
-        showRemove: false,
         autoReplace: true,
         minImageWidth: 50, //图片的最小宽度
         minImageHeight: 50,//图片的最小高度
         maxImageWidth: 2000,//图片的最大宽度
         maxImageHeight: 2000,//图片的最大高度
         maxFileSize: 8000,//单位为kb，如果为0表示不限制文件大小
+        showPreview:true,
+        resizeImage:true,
+        resizePreference:'height',
+        resizeImageQuality:0.9,
         maxFileCount: 1, //表示允许同时上传的最大文件个数
-        validateInitialCount: true,
         previewFileIcon: "<i class='fa fa-king'></i>",
         msgFilesTooMany: "选择上传的文件数量({n}) 超过允许的最大数值{m}！",
-        overwriteInitial: false,
         uploadExtraData: {
             "_t": '{$token}',
             'type': 's'
@@ -150,7 +143,6 @@
         enctype: 'multipart/form-data',
         previewFileIcon: "<i class='fa fa-king'></i>",
         msgFilesTooMany: "选择上传的文件数量({n}) 超过允许的最大数值{m}！",
-        overwriteInitial: false,
         uploadExtraData: {
             "_t": '{$token}',
             'type': 'm'
