--- a/public/static/css/project.css
+++ b/public/static/css/project.css
@@ -113,9 +113,13 @@
 }
 
 .project-team-container .form-control {
-    padding: 8px 20px;
-    padding: 0.5rem 1.25rem;
-    /*border-color: #ebebea;*/
+    outline-style: none ;
+    border: 1px solid #ccc; 
+    border-radius: 3px;
+    padding: 13px 14px;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: "Microsoft soft";
     font-size: inherit;
     box-shadow: none;
     -webkit-transition-duration: .25s;
@@ -127,4 +131,19 @@
     height: 38px;
     line-height: 38px;
     margin-bottom: 9px;
+}
+
+img {
+    width: 150px;
+    -webkit-transition: -webkit-transform .3s ease;
+    -moz-transition: -moz-transform .3s ease;
+    -ms-transition: -ms-transform .3s ease;
+    transition: transform .3s ease;
+}
+
+img:hover {
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2)
 }
