--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -201,12 +201,16 @@
             },
             dataType: 'json',
             success: function (ret) {
-                var $a = $("<a>");
-                $a.attr("href", ret.file);
-                $("body").append($a);
-                $a.attr("download", ret.filename);
-                $a[0].click();
-                $a.remove();
+                if (ret.code === 1) {
+                    var $a = $("<a>");
+                    $a.attr("href", ret.file);
+                    $("body").append($a);
+                    $a.attr("download", ret.filename);
+                    $a[0].click();
+                    $a.remove();
+                }else{
+                    showErrorMsg(ret.msg)
+                }
             }
         })
     })
